Removed scrollbar and fixed mercury thumbnail

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ h3 {
 
 header {
     background-color: rgb(1, 1, 70);
-    width: 100%;
     height: 15vh;
     display: flex;
     align-items: center;
@@ -194,7 +193,7 @@ dialog footer {
 @media (max-width: 520px) {
     .content_box_design{
         height: auto;
-        width: 90vw;
+        width: 100%;
     }
 }
 
